GMI not showing in prod. fix attempt

--- a/css/app.css
+++ b/css/app.css
@@ -11968,7 +11968,7 @@ textarea.form-control-lg {
   font-family: "Material Symbols Outlined";
   font-style: normal;
   font-weight: 400;
-  src: url("../../assets/fonts/material-icons/outlined.woff2") format("woff2");
+  src: url("../assets/fonts/material-icons/outlined.woff2") format("woff2");
 }
 .material-symbols-outlined {
   font-family: "Material Symbols Outlined";
