--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -167,7 +167,7 @@
     font-family: "Material Symbols Outlined";
     font-style: normal;
     font-weight: 400;
-    src: url("../../assets/fonts/material-icons/outlined.woff2") format("woff2");
+    src: url("../assets/fonts/material-icons/outlined.woff2") format("woff2");
 }
 
 .material-symbols-outlined {
